[metadata]
name = lagtraj
version = attr: lagtraj.__version__
author = Leif Denby
author_email = l.c.denby[at]leeds.ac.uk
description = Python trajectory code for Lagrangian simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EUREC4A-UK/lagtraj

[options]
packages=find:
install_requires =
  xarray>=0.16.0
  pytest
  netCDF4
  datetime
  numpy
  pyyaml
  cdsapi
  pandas!=1.1.0  # datetime indexing broken with 1.1.0, https://github.com/pydata/xarray/issues/4283
  scipy
  argparse
  dask[array]
  asciitree
  isodate
  psutil
  semver==2.13.0

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
dev =
  %(test)s
  pre-commit
  ipython

[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[isort]
profile=black

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
