[metadata]
name = lagtraj
version = attr: lagtraj.__version__
author = Leif Denby, Steef Boeing
author_email = leif@denby.eu
description = Python trajectory code for Lagrangian simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EUREC4A-UK/lagtraj

[options]
packages=find:
install_requires =
  xarray>=0.16.0
  netCDF4
  datetime
  numpy
  pyyaml
  cdsapi
  pandas!=1.0.5  # datetime indexing broken with 1.1.0, https://github.com/pydata/xarray/issues/4283
  scipy
  dask[array]
  asciitree
  isodate
  psutil
  semver==2.13.0

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
lint =
  pre-commit
dev =
  %(test)s
  %(lint)s
  ipython
